--- a/index.html
+++ b/index.html
@@ -474,10 +474,8 @@
             class="project-image"
           />
           <div class="project-content">
-            <div class="project-title">RG Hospitals</div>
-            <div class="project-type">
-              Website + Big Admin Dashboard + Mini CRM
-            </div>
+            <div class="project-title">RG Hospitals (Mini CRM)</div>
+            <div class="project-type">Website + Big Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://www.rghospitals.com/" target="_blank">Live</a>
               <div class="share-buttons">
@@ -504,7 +502,7 @@
         <div class="project-card">
           <img src="img/tollanis.png" alt="Tollanis" class="project-image" />
           <div class="project-content">
-            <div class="project-title">Tollanis</div>
+            <div class="project-title">Tollanis (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://tollanis.com/" target="_blank">Live</a>
@@ -532,7 +530,7 @@
         <div class="project-card">
           <img src="img/irhpl.png" alt="IRHPL" class="project-image" />
           <div class="project-content">
-            <div class="project-title">IRHPL</div>
+            <div class="project-title">IRHPL (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://irhpl.com/" target="_blank">Live</a>
@@ -557,12 +555,174 @@
           </div>
         </div>
 
-   
+        <!-- Project  -->
+        <div class="project-card">
+          <img src="img/protense.png" alt="Protense" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Protense (E-commerce)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="https://protense.in/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://protense.in/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://protense.in/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://protense.in/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img src="img/badami.png" alt="Badami Sweets" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Badami Sweets (E-commerce)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/badami/" target="_blank"
+                >Live</a
+              >
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/badami/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/badami/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/badami/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img src="img/dod.png" alt="Decade of Design" class="project-image" />
+          <div class="project-content">
+            <div class="project-title">Decade of Design (E-commerce)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/dod/" target="_blank"
+                >Live</a
+              >
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/dod/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/dod/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/dod/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img
+            src="img/ayka.png"
+            alt="Ayka Medical Hospitals"
+            class="project-image"
+          />
+          <div class="project-content">
+            <div class="project-title">
+              Ayka Medical Hospitals (Informative)
+            </div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="https://aykamedical.com/" target="_blank">Live</a>
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('https://aykamedical.com/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://aykamedical.com/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=https://aykamedical.com/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img
+            src="img/motherland.png"
+            alt="Motherland Hospital"
+            class="project-image"
+          />
+          <div class="project-content">
+            <div class="project-title">Motherland Hospital (Informative)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a
+                href="http://139.59.91.109/projects/motherland/public/"
+                target="_blank"
+                >Live</a
+              >
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://139.59.91.109/projects/motherland/public/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://139.59.91.109/projects/motherland/public/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://139.59.91.109/projects/motherland/public/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Project 4 -->
         <div class="project-card">
           <img src="img/anc.png" alt="Arora Neuro" class="project-image" />
           <div class="project-content">
-            <div class="project-title">Arora Neuro</div>
+            <div class="project-title">Arora Neuro (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://aroraneuro.com/" target="_blank">Live</a>
@@ -590,7 +750,7 @@
         <div class="project-card">
           <img src="img/polo.png" alt="Polo Elevators" class="project-image" />
           <div class="project-content">
-            <div class="project-title">Polo Elevators</div>
+            <div class="project-title">Polo Elevators (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://www.poloelevators.com/" target="_blank">Live</a>
@@ -618,7 +778,7 @@
         <div class="project-card">
           <img src="img/onecx.png" alt="OneCX" class="project-image" />
           <div class="project-content">
-            <div class="project-title">OneCX</div>
+            <div class="project-title">OneCX (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://onecx.in/" target="_blank">Live</a>
@@ -650,7 +810,7 @@
             class="project-image"
           />
           <div class="project-content">
-            <div class="project-title">Kuka Diagnostics</div>
+            <div class="project-title">Kuka Diagnostics (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://kukadiagnostics.com/" target="_blank">Live</a>
@@ -678,7 +838,7 @@
         <div class="project-card">
           <img src="img/almorix.png" alt="Almorix" class="project-image" />
           <div class="project-content">
-            <div class="project-title">Almorix</div>
+            <div class="project-title">Almorix (Informative)</div>
             <div class="project-type">Website + Admin Dashboard</div>
             <div class="project-buttons">
               <a href="https://almorix.com/" target="_blank">Live</a>
@@ -702,6 +862,78 @@
             </div>
           </div>
         </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img
+            src="img/resotica.png"
+            alt="Resotica Heights"
+            class="project-image"
+          />
+          <div class="project-content">
+            <div class="project-title">Resotica Heights (Informative)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a href="http://24.199.113.101/projects/resotica/" target="_blank"
+                >Live</a
+              >
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/resotica/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/resotica/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/resotica/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project  -->
+        <div class="project-card">
+          <img
+            src="img/snyect.png"
+            alt="Synnect Global"
+            class="project-image"
+          />
+          <div class="project-content">
+            <div class="project-title">Synnect Global (Informative)</div>
+            <div class="project-type">Website + Admin Dashboard</div>
+            <div class="project-buttons">
+              <a
+                href="http://24.199.113.101/projects/synnectglobal/"
+                target="_blank"
+                >Live</a
+              >
+              <div class="share-buttons">
+                <button
+                  onclick="navigator.clipboard.writeText('http://24.199.113.101/projects/synnectglobal/')"
+                >
+                  🔗
+                </button>
+                <button
+                  onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://24.199.113.101/projects/synnectglobal/','_blank')"
+                >
+                  f
+                </button>
+                <button
+                  onclick="window.open('https://twitter.com/intent/tweet?url=http://24.199.113.101/projects/synnectglobal/','_blank')"
+                >
+                  t
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- AWARDS -->
@@ -715,6 +947,7 @@
     </div>
   </body>
 </html>
+
 
 
 
