--- a/index.html
+++ b/index.html
@@ -362,29 +362,45 @@
       <h2>Professional Experience</h2>
 
       <div class="section">
-        <p class="position-title">Web Developer</p>
-        <p class="company">Doors Studio | July 2023 – Present</p>
-        <ul>
-          <li>
-            Developing advanced web applications and CRM dashboards using
-            CodeIgniter 4.
-          </li>
-          <li>
-            Architected and developed enterprise-grade hospital CRM systems and
-            admin panels.
-          </li>
-          <li>
-            Managing multiple live projects ensuring high performance and strong
-            security.
-          </li>
-          <li>
-            Collaborating with UI/UX teams to improve design and user
-            experience.
-          </li>
-          <li>
-            Optimizing backend performance, database structure, and application
-            security.
-          </li>
+      <p class="position-title">Web Developer</p>
+      <p class="company">Doors Studio | July 2023 – Present</p>
+      <ul>
+        <li>
+          Developing scalable and secure web applications and CRM dashboards using
+          <strong>PHP 8, Core PHP, CodeIgniter 4, and Laravel</strong>.
+        </li>
+        <li>
+          Architected and developed enterprise-grade <strong>hospital CRM systems</strong>,
+          admin panels, and role-based access modules.
+        </li>
+        <li>
+          Designed and delivered multiple <strong>E-commerce projects</strong> including
+          product management, cart, checkout, and order processing systems.
+        </li>
+        <li>
+          Implemented <strong>API development & integrations</strong> for third-party services,
+          payment gateways, and mobile applications.
+        </li>
+        <li>
+          Integrated <strong>Email, SMS, and OTP-based authentication systems</strong>
+          for user verification, notifications, and security workflows.
+        </li>
+        <li>
+          Optimized backend performance, <strong>MySQL database structure</strong>,
+          and enhanced application security.
+        </li>
+        <li>
+          Collaborated closely with <strong>UI/UX designers</strong> to improve user experience
+          using HTML, CSS, and JavaScript.
+        </li>
+        <li>
+          Worked with <strong>WordPress</strong> websites including customization,
+          performance optimization, and <strong>SEO improvements</strong>.
+        </li>
+        <li>
+          Managed multiple live projects simultaneously, ensuring high performance,
+          security, and timely delivery.
+        </li>
         </ul>
       </div>
 
@@ -947,6 +963,7 @@
     </div>
   </body>
 </html>
+
 
 
 
