Update print statement to show 'Goodbye World'
OG tag added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Akshay Tamrakar CV</title>
+    <title>Akshay Tamrakar - Web Developer CV</title>
+      <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Akshay Tamrakar - Web Developer CV" />
+  <meta property="og:description" content="My personal CV website with projects and skills." />
+  <meta property="og:image" content="https://akshay-tamrakar-5.github.io/portfolio/img/Akshay%20tamrakar.png" />
+  <meta property="og:url" content="https://akshay-tamrakar-5.github.io/portfolio/" />
+  <meta property="og:type" content="portfolio" />
 
     <style>
       body {
@@ -963,6 +969,7 @@
     </div>
   </body>
 </html>
+
 
 
 
